--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   photo_view: ^0.14.0
   scrollable_list_tabview: ^0.1.6
+  timer_count_down: ^2.2.1
+  
 dev_dependencies:
   flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2 
