--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,5 +73,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+    //implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 }
