--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   firebase_auth: ^3.3.16
   firebase_core: ^1.15.0
   google_sign_in: ^5.3.0
-  flutter_facebook_auth: ^4.3.0
-  flutter_login_facebook: ^1.4.1
+  #flutter_facebook_auth: ^4.3.0
+  #flutter_login_facebook: ^1.4.1
   url_launcher: ^6.0.0
   dio: ^4.0.6
   get: ^4.6.1
@@ -53,6 +53,7 @@ dependencies:
   photo_view: ^0.14.0
   scrollable_list_tabview: ^0.1.6
   timer_count_down: ^2.2.1
+  im_stepper: ^1.0.1+1
   
 dev_dependencies:
   flutter_native_splash: ^2.1.6
