--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   rxdart: ^0.27.3
   shared_preferences: ^2.0.13
   flutter_svg: ^1.0.3
-  firebase_auth: ^3.3.16
-  firebase_core: ^1.15.0
+  firebase_auth: ^4.1.5
+  firebase_core: ^2.3.0
   google_sign_in: ^5.3.0
   #flutter_facebook_auth: ^4.3.0
   #flutter_login_facebook: ^1.4.1
@@ -55,6 +55,7 @@ dependencies:
   timer_count_down: ^2.2.1
   timelines: ^0.1.0
   insta_image_viewer: ^1.0.2
+  firebase_dynamic_links: ^5.0.7
 
 dev_dependencies:
   flutter_native_splash: ^2.1.6
