chick for updates commit

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,9 @@ dependencies:
   timelines: ^0.1.0
   insta_image_viewer: ^1.0.2
   firebase_dynamic_links: ^5.0.7
-
+  launch_review: ^3.0.1
+  package_info_plus: ^3.0.2
+  
 dev_dependencies:
   flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2 
