--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   launch_review: ^3.0.1
   package_info_plus: ^3.0.2
   dropdown_search: ^2.0.1
+  share_plus: ^6.3.0
+  cached_network_image: ^3.2.3
   
 dev_dependencies:
   flutter_native_splash: ^2.1.6
