--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.menuEgypt</string>
+	<string>com.menuegypt.menuegupt</string>
 	<key>PROJECT_ID</key>
 	<string>wasla-cb0d3</string>
 	<key>STORAGE_BUCKET</key>
