--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   share_plus: ^6.3.0
   cached_network_image: ^3.2.3
   card_loading: ^0.2.2
+  loading_animation_widget: ^1.2.0+4
+
   
 dev_dependencies:
   flutter_native_splash: ^2.1.6
