open dynamic link in web from pc commit

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,9 @@
 				<string>itms-beta</string>
 				<string>itms</string>
 		</array>
+		<key>FirebaseDynamicLinksCustomDomains</key>
+		<array>
+   			 <string>https://menuegupt.page.link</string>
+		</array>
 	</dict>
 </plist>
