--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
               <action android:name="android.intent.action.VIEW" />
               <category android:name="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.BROWSABLE" />
-              <data android:scheme="http" android:host="menuegypt.page.link" />
+              <data android:scheme="http" android:host="menuegupt.page.link" />
               <data android:scheme="https" />
           </intent-filter>
         </activity>
