--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+3
+version: 1.0.0+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,6 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.4
+  easy_image_viewer: ^1.1.0
   rxdart: ^0.27.3
   shared_preferences: ^2.0.13
   flutter_svg: ^1.0.3
@@ -43,7 +44,7 @@ dependencies:
   carousel_slider: ^4.1.1
   font_awesome_flutter: ^10.1.0
   json_annotation: ^4.5.0
-  flutter_typeahead: ^4.0.0
+  flutter_typeahead: 4.3.1
   material_floating_search_bar: ^0.3.7
   intl: ^0.17.0
   flutter_offline: ^2.1.0
@@ -63,8 +64,8 @@ dependencies:
   cached_network_image: ^3.2.3
   card_loading: ^0.2.2
   loading_animation_widget: ^1.2.0+4
+  panara_dialogs: ^0.1.4
 
-  
 dev_dependencies:
   flutter_native_splash: ^2.1.6
   flutter_launcher_icons: ^0.9.2 
@@ -100,6 +101,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - assets/gif/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
